--- a/templates/card.html
+++ b/templates/card.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{{candidate.name}}</title>
 </head>
 <body>
-<h1>Имя кандидата: {name}</h1>
-<p>Позиция кандидата: {}</p>
-<img src="{}" width=200/>
-<p>Навыки кандидата: {}</p>
+<h1>Имя кандидата: {{candidate.name}}</h1>
+<p>Позиция кандидата: {{candidate.position}}</p>
+<img src="{{candidate.picture}}" width=200/>
+<p>Навыки кандидата: {{candidate.skills}}</p>
 </body>
 </html>
