--- a/templates/search.html
+++ b/templates/search.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1>Найдено кандидатов {{ candidates|length }}</h1>
+{% for candidate in candidates %}
+<p><a href="/candidate/{{ candidate.id }}">{{candidate["name"]}}</a></p>
+{% endfor %}
 </body>
 </html>
