--- a/templates/skill.html
+++ b/templates/skill.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1>Найдено со скиллом {{ skill }}: {{ candidates|length }}</h1>
+{% for candidate in candidates %}
+<p><a href="/candidate/{{ candidate.id }}">{{ candidate["name"] }}</a></p>
+{% endfor %}
 </body>
 </html>
