--- a/templates/search.html
+++ b/templates/search.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Найденые кандидаты</title>
 </head>
 <body>
 <h1>Найдено кандидатов {{ candidates|length }}</h1>
