--- a/templates/skill.html
+++ b/templates/skill.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{{ skill }}</title>
 </head>
 <body>
 <h1>Найдено со скиллом {{ skill }}: {{ candidates|length }}</h1>
